manifest/apps/product/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-services
  namespace: be-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-services
  template:
    metadata:
      name: product-services
      labels:
        app: product-services
    spec:
      containers:
        - name: product-services
          image: nvlannasik/product-services-nodejs:release-0.2.9
          ports:
            - name: product-svc
              containerPort: 3000
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
